Created a 'best practice' manual for file paths following the discussion between Julien, Angel, and I. Also added wildcard PDF/HTML to the gitignore for this folder so that the knit products won't crowd the repo

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ vignettes/*.pdf
 # Ignore certain folders
 Data/
 Plots/
+
+# Ignore any knit files in the best practice manuals folder
+best_practice_manuals/*.pdf
+best_practice_manuals/*.html
