Added 'task_export' folder to the gitignore and removed its contents

--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,9 @@ vignettes/*.pdf
 *.Rproj
 
 # Ignore certain folders
-Data/
-Plots/
+data/
+plots/
+task_export/
 
 # Ignore any knit files in the best practice manuals folder
 best_practice_manuals/*.pdf
