Created the basic architecture of a Quarto website and moved the 'best practices' file into a .qmd file to include it in the website (rather than as a standalone .Rmd)

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ task_export/
 # Ignore any knit files in the best practice manuals folder
 best_practice_manuals/*.pdf
 best_practice_manuals/*.html
+
+/.quarto/
