Added a page in the website for explanation of / links to `scicomptools`

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,7 @@ website:
       - href: index.qmd
         text: Home
       - staff.qmd
+      - pkgs.qmd
       - best_practices.qmd
     right:
       - icon: github
