Added an option lets Twitter scrape the site to make a better Twitter card (if folx Tweet this link)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,7 @@ website:
   title: "NCEAS Scientific Computing"
   repo-url: https://github.com/NCEAS/scicomptasks
   repo-actions: [issue]
+  twitter-card: true
   navbar:
     background: dark
     left:
