Added a 'workshops' tab and linked to the repositories for the `tidyverse` and GitHub repos

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,7 @@ website:
         text: Home
       - staff.qmd
       - pkgs.qmd
+      - workshops.qmd
       - best_practices.qmd
     right:
       - icon: github
