--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,6 +24,8 @@ website:
   page-footer:
     center: "Copyright 2022, NCEAS"
     background: secondary
+  margin-footer: |
+    <img src="images/nceas_logo_square.png" width="40%"/>
 
 format:
   html:
